--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   "license": "MIT",
   "dependencies": {
     "@babel/register": "^7.0.0",
+    "bootstrap": "^4.3.1",
     "connected-react-router": "^5.0.1",
     "electron-store": "^3.0.0",
     "history": "^4.6.3",
+    "jquery": "^3.4.0",
+    "popper.js": "^1.15.0",
     "prop-types": "^15.5.10",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
