--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "popper.js": "^1.15.0",
     "prop-types": "^15.5.10",
     "react": "^16.2.0",
+    "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.2",
     "react-router": "^4.1.2",
