--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.2.1",
     "redux-localstorage": "^0.4.1",
-    "redux-thunk": "^2.2.0",
-    "styled-components": "^4.2.0"
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
